tekton/os/hashicorp-vault/tea-hashicorp-vault-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: tea-hashicorp-vault-service
spec:
  ports:
    - protocol: TCP
      port: 7800
      targetPort: 7800
  selector:
    app: tea-hashicorp-vault
  type: NodePort
  sessionAffinity: None
  externalTrafficPolicy: Cluster
