tekton/os/hashicorp-vault/tea-hashicorp-vault-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: tea-hashicorp-vault-route
  namespace: default
spec:
  host: tea-hashicorp-vault.apps.aster-openshift.dolbyfamily.org
  to:
    kind: Service
    name: tea-hashicorp-vault-service
    weight: 100
  port:
    targetPort: 7800
  wildcardPolicy: None
